--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,5 +82,12 @@
 
     <string name="markComplete">Complete</string>
     <string name="notDone">Not Done</string>
+    <string name="group">Group</string>
+    <string name="map">Map</string>
+    <string name="sort">Sort</string>
+    <string name="done">Done</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
