--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="password">Password</string>
     <string name="loginFailed">Login failed</string>
     <string name="shopName">Shop Name</string>
+    <string name="shopBranch">Shop Branch</string>
     <string name="shopLocation">Shop Location</string>
     <string name="shopAddress">Shop Address</string>
     <string name="exception_message">Some error occurred</string>
@@ -87,7 +88,7 @@
     <string name="sort">Sort</string>
     <string name="done">Done</string>
 
-<!-- TODO: Remove or change this placeholder text -->
+    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
