--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,6 +53,11 @@
         <item>Settings</item>
         <item>Logout</item>
     </string-array>
+    <string-array name="admin_array_menu_main">
+        <item>RFE List</item>
+        <item>Settings</item>
+        <item>Logout</item>
+    </string-array>
 
     <string-array name="menu_array">
         <item>Task List</item>
