--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,9 @@
     <string name="action_search">Search</string>
     <string name="action_settings">Settings</string>
     <string name="SyncButton">Sync</string>
+    <string name="Rfename">Rfe Name</string>
+    <string name="Description">Description</string>
+    <string name="Rfecode">Code</string>
     <string name="imgMap">Map</string>
     <string name="action_logout">Logout</string>
     <string name="action_refresh">Refresh</string>
